fix: make usageTypes mutable to prevent Hibernate UnsupportedOperationException